[gd_scene load_steps=16 format=3 uid="uid://cs07skhgx6du3"]

[ext_resource type="Script" path="res://scripts/StationsManager.gd" id="1_3ecvm"]
[ext_resource type="Script" path="res://scripts/Camera2D.gd" id="2_riod3"]
[ext_resource type="Texture2D" uid="uid://cex8juvkcgjk2" path="res://assets/shadow4.png" id="2_ti3vn"]
[ext_resource type="Texture2D" uid="uid://bh3ato2ddh0hu" path="res://assets/station1.png" id="3_inkbb"]
[ext_resource type="Texture2D" uid="uid://dxorf6u7sjexj" path="res://assets/station2.png" id="4_6tir6"]
[ext_resource type="Texture2D" uid="uid://w5mwumtlappx" path="res://assets/station3.png" id="5_vxgoh"]
[ext_resource type="PackedScene" uid="uid://1k8t2gdk3edt" path="res://scenes/lab.tscn" id="6_cs6ya"]
[ext_resource type="Script" path="res://scripts/StationSwitch.gd" id="6_yc28x"]
[ext_resource type="PackedScene" uid="uid://btqr21hdyphne" path="res://scenes/packing.tscn" id="8_2v83r"]
[ext_resource type="PackedScene" uid="uid://dcdxjitoh3gg2" path="res://scenes/quality.tscn" id="10_xbmq4"]
[ext_resource type="PackedScene" uid="uid://dgoox27owmwi" path="res://scenes/Results.tscn" id="11_c3lm8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_macag"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_632xe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6x3uf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f2hak"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_3ecvm")

[node name="Background" type="TextureRect" parent="."]
offset_right = 4960.0
offset_bottom = 1360.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("2_ti3vn")
stretch_mode = 4

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(0.487, 0.487)
script = ExtResource("2_riod3")

[node name="BackBackground" type="ColorRect" parent="."]
show_behind_parent = true
z_index = -1
offset_left = -1092.0
offset_top = -990.0
offset_right = 5520.0
offset_bottom = 2511.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="LabIcon" type="Button" parent="."]
offset_left = 695.0
offset_top = 288.0
offset_right = 1045.0
offset_bottom = 638.0
scale = Vector2(1.31, 1.31)
theme_override_styles/normal = SubResource("StyleBoxFlat_macag")
theme_override_styles/hover = SubResource("StyleBoxFlat_632xe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6x3uf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f2hak")
icon = ExtResource("3_inkbb")
flat = true
icon_alignment = 1
script = ExtResource("6_yc28x")
scene_to_load = ExtResource("6_cs6ya")

[node name="PackIcon" type="Button" parent="."]
offset_left = 1787.0
offset_top = 288.0
offset_right = 2137.0
offset_bottom = 638.0
scale = Vector2(1.31, 1.31)
theme_override_styles/normal = SubResource("StyleBoxFlat_macag")
theme_override_styles/hover = SubResource("StyleBoxFlat_632xe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6x3uf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f2hak")
icon = ExtResource("4_6tir6")
flat = true
icon_alignment = 1
script = ExtResource("6_yc28x")
scene_to_load = ExtResource("8_2v83r")

[node name="QualityIcon" type="Button" parent="."]
offset_left = 2846.0
offset_top = 288.0
offset_right = 3196.0
offset_bottom = 638.0
scale = Vector2(1.31, 1.31)
theme_override_styles/normal = SubResource("StyleBoxFlat_macag")
theme_override_styles/hover = SubResource("StyleBoxFlat_632xe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6x3uf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f2hak")
icon = ExtResource("5_vxgoh")
flat = true
icon_alignment = 1
script = ExtResource("6_yc28x")
scene_to_load = ExtResource("10_xbmq4")

[node name="Distribute" type="Button" parent="."]
modulate = Color(0.356863, 0.411765, 0.258824, 1)
offset_left = 3801.0
offset_top = 249.0
offset_right = 4494.0
offset_bottom = 675.0
scale = Vector2(1.31, 1.31)
theme_override_styles/normal = SubResource("StyleBoxFlat_macag")
theme_override_styles/hover = SubResource("StyleBoxFlat_632xe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6x3uf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f2hak")
flat = true
icon_alignment = 1
script = ExtResource("6_yc28x")
scene_to_load = ExtResource("11_c3lm8")

[node name="Label" type="Label" parent="."]
offset_left = 696.0
offset_top = 1219.0
offset_right = 1608.0
offset_bottom = 1305.0
theme_override_font_sizes/font_size = 51
text = "Drag horizontally to scroll the screen."
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -8.0
offset_right = 24.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.282353)
